--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,10 +1,17 @@
 version: 2
 
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.10"
+
 python:
   # Install our python package before building the docs
   install:
+    - requirements: docs/requirements.txt
     - method: pip
       path: .
 
 sphinx:
   fail_on_warning: true
+  configuration: docs/source/conf.py
